[2150] Fix check details inset text spacing

--- a/app/components/collapsed_section/style.scss
+++ b/app/components/collapsed_section/style.scss
@@ -1,11 +1,16 @@
 @import "../base.scss";
 
+$govuk-border-width-narrow: 5px;
+
 .app-inset-text--narrow-border {
   border-left-width: $govuk-border-width-narrow;
 }
 
 .app-inset-text--important {
   border-color: govuk-colour("blue");
+  padding: govuk-spacing(2);
+  padding-left: govuk-spacing(3);
+  margin: govuk-spacing(0) auto govuk-spacing(4);
 
   .app-inset-text__title {
     color: govuk-colour("blue");
@@ -22,5 +27,5 @@
 
 .app-inset-text__title {
   @include govuk-font($size: 19, $weight: "bold");
-  margin-bottom: govuk-spacing(2);
+  margin-bottom: govuk-spacing(0);
 }
